# Capture-and-Record-Video-using-Zed-Camera

./: CMakeLists.txt  README.md  main.cpp
